# econ

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  econ-dev.ioc
Core/Inc/: main.h
Core/Inc/ILI9341/: ILI9341_STM32_Driver.h
Core/Platform/: platform.h
Core/Platform/platform/: display.h  input.h  system.h
Core/Src/: gpio.c  input.c  main.c  tim.c
Core/Src/ILI9341/: ILI9341_GFX.c  ILI9341_STM32_Driver.c
EPICF/: CMakeLists.txt  Doc.md
EPICF/Inc/: default.h  error.h  game.h  gfx.h  menu.h  system.h
EPICF/Platform/: epicf.h  game.h
EPICF/Src/: game.c  gfx.c  menu.c  system.c
Games/: CMakeLists.txt
Games/Defs/: game-list.h  game-list.h.in
Games/TestGame/: CMakeLists.txt
Games/TestGame/Inc/: main.h
Games/TestGame/Src/: game.c
